FRONT: sistema de cola añadido correctamente. BACK: refactorizacion de codigo absoluta en todos los mappers y services.